[package]
name = "mdbook-translation"
version = "0.1.0"
authors = ["Charles Lew <crlf0710@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdtranslation = { version = "0.1.0", path = ".." }
mdbook = { version = "0.4", default-features = false }
clap = "2.33.3"
serde_json = "1.0.64"
semver = "1.0.2"
pulldown-cmark = "0.8.0"
