[package]
name = "mdbook-translation"
version = "0.1.1"
authors = ["Charles Lew <crlf0710@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A utility to prepare multi-lingual mdBook books"
keywords = ["localization", "translation", "mdbook", "markdown"]
categories = ["text-processing", "localization"]
repository = "https://github.com/crlf0710/mdTranslation"

[dependencies]
mdtranslation = { version = "0.1.2", path = ".." }
mdbook = { version = "0.4", default-features = false }
clap = "2.33.3"
serde_json = "1.0.64"
semver = "1.0.2"
