[package]
name = "mdtranslation-cli"
version = "0.1.0"
authors = ["Charles Lew <crlf0710@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdtranslation = {version = "0.1", path = ".."}
anyhow = "1.0.40"
structopt = "0.3.21"
