[package]
name = "mdtranslation-cli"
version = "0.1.0"
authors = ["Charles Lew <crlf0710@gmail.com>"]
edition = "2018"
description = "Command-line tools for using mdTranslation, which can be used to prepare multi-lingual Markdown documents"
keywords = ["localization", "translation", "markdown", "commonmark"]
categories = ["text-processing", "localization"]
repository = "https://github.com/crlf0710/mdTranslation"

[dependencies]
mdtranslation = {version = "0.1", path = ".."}
anyhow = "1.0.40"
structopt = "0.3.21"
